tests/default-features-build/tests/builds/unsupported_client.stderr
error[E0277]: `Rc<i32>` cannot be sent between threads safely
  --> $DIR/unsupported_client.rs:22:29
   |
22 |         Err(Error::response(TestError::default()))
   |             --------------- ^^^^^^^^^^^^^^^^^^^^ `Rc<i32>` cannot be sent between threads safely
   |             |
   |             required by a bound introduced by this call
   |
   = help: within `TestError`, the trait `Send` is not implemented for `Rc<i32>`
note: required because it appears within the type `TestError`
  --> $DIR/unsupported_client.rs:8:8
   |
8  | struct TestError {
   |        ^^^^^^^^^
note: required by a bound in `pretend::Error::response`
  --> $DIR/errors.rs:73:30
   |
73 |     error::Error + 'static + Send + Sync
   |                              ^^^^ required by this bound in `pretend::Error::response`

error[E0277]: `Rc<i32>` cannot be shared between threads safely
  --> $DIR/unsupported_client.rs:22:29
   |
22 |         Err(Error::response(TestError::default()))
   |             --------------- ^^^^^^^^^^^^^^^^^^^^ `Rc<i32>` cannot be shared between threads safely
   |             |
   |             required by a bound introduced by this call
   |
   = help: within `TestError`, the trait `Sync` is not implemented for `Rc<i32>`
note: required because it appears within the type `TestError`
  --> $DIR/unsupported_client.rs:8:8
   |
8  | struct TestError {
   |        ^^^^^^^^^
note: required by a bound in `pretend::Error::response`
  --> $DIR/errors.rs:73:37
   |
73 |     error::Error + 'static + Send + Sync
   |                                     ^^^^ required by this bound in `pretend::Error::response`
